--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Birthdays">
-        <activity android:name="com.chalkboardexam.birthdays.BirthdaysActivity">
+        <activity android:name="com.chalkboardexam.birthdays.framework.ui.birthdays.BirthdaysActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
